--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -1,4 +1,9 @@
 {
+    "increaseSizeHeader": "aumentar el tamaño",
+    "cursorSizeLabel": "Tamaño del puntero",
+    "textSizeSmallIcon": "icon of a small capital letter 'A'",
+    "textSizeLargeIcon": "icon of a large capital letter 'A'",
+    "multiplier": "times",
     "magnifierLabel": "Magnificador",
     "magnifierOFF": "Apagado",
     "magnifierMAX": "Máximo",
@@ -14,5 +19,7 @@
     "magnifierFollowsLabel": "Seguimiento del magnificador",
     "magnifierFollows.mousecursor": "Puntero del ratón",
     "magnifierFollows.textcursor": "Cursor del texto",
-    "magnifierFollows.keyboardfocus": "Foco del teclado"
+    "magnifierFollows.keyboardfocus": "Foco del teclado",
+    "textSizeLabel": "Tamaño del texto",
+    "previewText": "Así es como se mostrará  la mayoría del texto."
 }
