Metric units are now part of i18n message bundles.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -17,5 +17,7 @@
     "magnifierFollows.textcursor": "Eingabezeiger",
     "magnifierFollows.keyboardfocus": "Tastaturfokus",
     "textSizeLabel": "Textgröße",
-    "previewText": "So wird Text meistens aussehen."
+    "previewText": "So wird Text meistens aussehen.",
+    "fontSizeStringTemplate" : "%0pt",
+    "magnifierStringTemplate" : "%0%"
 }
