GPII-153, GPII-187: Replaced plusMinus component used in pmt textSize adjuster for incrementing or decrementing font size with textfieldStepper component.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -18,6 +18,6 @@
     "magnifierFollows-keyboardfocus": "Tastaturfokus",
     "textSizeLabel": "Textgröße",
     "previewText": "So wird Text meistens aussehen.",
-    "fontSizeStringTemplate" : "%0pt",
+    "fontSizeUnit" : "pt",
     "magnifierStringTemplate" : "%0%"
 }
