--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -18,6 +18,6 @@
     "magnifierFollows-keyboardfocus": "Foco del teclado",
     "textSizeLabel": "Tamaño del texto",
     "previewText": "Así es como se mostrará  la mayoría del texto.",
-    "fontSizeStringTemplate" : "%0pt",
+    "fontSizeUnit" : "pt",
     "magnifierStringTemplate" : "%0%"
 }
