GPII-187: Added expanded headings in "increase size" adjuster. Some styling will be needed here.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -19,5 +19,7 @@
     "textSizeLabel": "Textgröße",
     "previewText": "So wird Text meistens aussehen.",
     "fontSizeUnit" : "pt",
-    "magnifierStringTemplate" : "%0%"
+    "magnifierStringTemplate" : "%0%",
+    "appearance": "appearance",
+    "magnifier": "magnifier"
 }
