--- a/src/shared/adjusters/messages/el/increaseSize.json
+++ b/src/shared/adjusters/messages/el/increaseSize.json
@@ -19,5 +19,7 @@
     "textSizeLabel": "Μέγεθος κειμένου",
     "previewText": "Έτσι θα εμφανίζεται το περισσότερο κείμενο.",
     "fontSizeUnit" : "pt",
-    "magnifierStringTemplate" : "%0%"
+    "magnifierStringTemplate" : "%0%",
+    "appearance": "appearance",
+    "magnifier": "magnifier"
 }
