GPII-153, GPII-187: Created a wrapper stepper class gpii.adjuster.textfieldStepper and applied it to PMT and PCP. This leads to the removal of plusMinus component in PMT code.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -19,7 +19,7 @@
     "textSizeLabel": "Textgröße",
     "previewText": "So wird Text meistens aussehen.",
     "fontSizeUnit" : "pt",
-    "magnifierStringTemplate" : "%0%",
+    "magnifierUnit" : "%",
     "appearance": "appearance",
     "magnifier": "magnifier"
 }
