--- a/src/shared/adjusters/messages/el/increaseSize.json
+++ b/src/shared/adjusters/messages/el/increaseSize.json
@@ -19,7 +19,7 @@
     "textSizeLabel": "Μέγεθος κειμένου",
     "previewText": "Έτσι θα εμφανίζεται το περισσότερο κείμενο.",
     "fontSizeUnit" : "pt",
-    "magnifierStringTemplate" : "%0%",
+    "magnifierUnit" : "%",
     "appearance": "appearance",
     "magnifier": "magnifier"
 }
