--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -19,7 +19,7 @@
     "textSizeLabel": "Tamaño del texto",
     "previewText": "Así es como se mostrará  la mayoría del texto.",
     "fontSizeUnit" : "pt",
-    "magnifierStringTemplate" : "%0%",
+    "magnifierUnit" : "%",
     "appearance": "appearance",
     "magnifier": "magnifier"
 }
