NOJIRA: Added some greek translations for frames. i18n'ed the "save & apply" button.

--- a/src/shared/adjusters/messages/el/increaseSize.json
+++ b/src/shared/adjusters/messages/el/increaseSize.json
@@ -1,6 +1,6 @@
 {
     "increaseSizeHeader": "αύξηση μεγέθους",
     "previewText": "Έτσι θα εμφανίζεται το περισσότερο κείμενο.",
-    "appearance": "appearance",
-    "magnifier": "magnifier"
+    "appearance": "εμφάνιση",
+    "magnifier": "μεγεθυντικός φακός"
 }
