--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -1,6 +1,6 @@
 {
     "increaseSizeHeader": "vergrößern",
     "previewText": "So wird Text meistens aussehen.",
-    "appearance": "appearance",
-    "magnifier": "magnifier"
+    "appearance": "Aussehen",
+    "magnifier": "Lupe"
 }
