GPII-227: Added some greek and spanish translations.

--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -1,6 +1,6 @@
 {
     "increaseSizeHeader": "aumentar el tamaño",
     "previewText": "Así es como se mostrará  la mayoría del texto.",
-    "appearance": "appearance",
-    "magnifier": "magnifier"
+    "appearance": "apariencia",
+    "magnifier": "magnificador"
 }
