GPII-601: Updated universal dependency
Corrected the dependency on universal to point at the GPII/universal repo instead of yzen/universal.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "bugs": "http://wiki.gpii.net/index.php/Main_Page",
     "homepage": "http://gpii.net/",
     "dependencies": {
-        "universal": "git://github.com/yzen/universal.git"
+        "universal": "git://github.com/GPII/universal.git"
     },
     "licenses": [
         {
