GPII-592: Added aria values to expanding panels' elements. Only thing missing is the setting of the "aria-expanded" for the "Visual Alternatives". Also, the "aria-label" of "Visual Alternatives" is lost when the conditional panel is toggled.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -2,5 +2,7 @@
     "increaseSizeHeader": "vergrößern",
     "previewText": "So wird Text meistens aussehen.",
     "appearance": "Aussehen",
-    "magnifier": "Lupe"
+    "magnifier": "Lupe",
+    "additionalMagnifierAdjusters": "additional magnifier adjusters",
+    "additionalVisualAdjusters": "additional visual adjusters"
 }
