GPII-227: Added some Spanish translations.

--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -3,6 +3,6 @@
     "previewText": "Así es como se mostrará  la mayoría del texto.",
     "appearance": "apariencia",
     "magnifier": "magnificador",
-    "additionalMagnifierAdjusters": "additional magnifier adjusters",
-    "additionalVisualAdjusters": "additional visual adjusters"
+    "additionalMagnifierAdjusters": "más ajustadores de lupa",
+    "additionalVisualAdjusters": "más ajustadores de lectores de pantalla"
 }
