GPII-227: Added some German translations.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -3,6 +3,6 @@
     "previewText": "So wird Text meistens aussehen.",
     "appearance": "Aussehen",
     "magnifier": "Lupe",
-    "additionalMagnifierAdjusters": "zusätzliche Regler für Vergrößerungen",
-    "additionalVisualAdjusters": "zusätzliche Regler für Anzeigen"
+    "additionalMagnifierAdjusters": "Erweiterte Einstellungen für die Bildschirmlupe",
+    "additionalVisualAdjusters": "Erweiterte Einstellungen für den Screenreader"
 }
