--- a/src/shared/adjusters/messages/el/increaseSize.json
+++ b/src/shared/adjusters/messages/el/increaseSize.json
@@ -4,5 +4,7 @@
     "appearance": "εμφάνιση",
     "magnifier": "μεγεθυντικός φακός",
     "additionalMagnifierAdjusters": "περισσότερες ρυθμίσεις μεγέθυνσης",
-    "additionalVisualAdjusters": "περισσότερες οπτικές ρυθμίσεις"
+    "additionalVisualAdjusters": "περισσότερες οπτικές ρυθμίσεις",
+    "moreMagnifierPreferences": "περισσότερες ρυθμίσεις μεγέθυνσης",
+    "lessMagnifierPreferences": "λιγότερες ρυθμίσεις μεγένθυσης"
 }
