--- a/src/shared/adjusters/messages/en/increaseSize.json
+++ b/src/shared/adjusters/messages/en/increaseSize.json
@@ -3,6 +3,8 @@
     "previewText": "This is how most text will appear.",
     "appearance": "appearance",
     "magnifier": "magnifier",
-    "additionalMagnifierAdjusters": "additional magnifier adjusters",
-    "additionalVisualAdjusters": "additional visual adjusters"
+    "additionalMagnifierAdjusters": "additional magnifier preferences",
+    "additionalVisualAdjusters": "additional visual preferences",
+    "moreMagnifierPreferences": "more magnifier preferences",
+    "lessMagnifierPreferences": "less magnifier preferences"
 }
