--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -5,6 +5,6 @@
     "magnifier": "Lupe",
     "additionalMagnifierAdjusters": "Erweiterte Einstellungen für die Bildschirmlupe",
     "additionalVisualAdjusters": "Erweiterte Einstellungen für den Screenreader",
-    "moreMagnifierPreferences": "more magnifier preferences",
-    "lessMagnifierPreferences": "less magnifier preferences"
+    "moreMagnifierPreferences": "mehr Einstellungen für Vergrößerung",
+    "lessMagnifierPreferences": "weniger Einstellungen für Vergrößerung"
 }
