GPII-726: Translation into spanish. The translation includes: - more speak text preferences - less speak text preferences - more magnifier preferences - less magnifier preferences

--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -5,6 +5,6 @@
     "magnifier": "magnificador",
     "additionalMagnifierAdjusters": "más ajustadores de lupa",
     "additionalVisualAdjusters": "más ajustadores de lectores de pantalla",
-    "moreMagnifierPreferences": "more magnifier preferences",
-    "lessMagnifierPreferences": "less magnifier preferences"
+    "moreMagnifierPreferences": "Más preferencias de lupa",
+    "lessMagnifierPreferences": "Menos preferencias de lupa"
 }
