GPII-1023: Placing the auto-adjust adjuster below magnifier adjuster. The current version includes the implementation of the adjuster (js and html template) and the translations.

--- a/src/shared/adjusters/messages/de/increaseSize.json
+++ b/src/shared/adjusters/messages/de/increaseSize.json
@@ -6,5 +6,7 @@
     "additionalMagnifierAdjusters": "Erweiterte Einstellungen für die Bildschirmlupe",
     "additionalVisualAdjusters": "Erweiterte Einstellungen für den Screenreader",
     "moreMagnifierPreferences": "mehr Einstellungen für Vergrößerung",
-    "lessMagnifierPreferences": "weniger Einstellungen für Vergrößerung"
+    "lessMagnifierPreferences": "weniger Einstellungen für Vergrößerung",
+    "autoAdjustLabel": "Auto-einstellen",
+    "autoAdjustDescription": "Einstellungen werden automatisch eingestellt basieren auf Hintergrundgeräusche und Umgebungslicht."
 }
