--- a/src/shared/adjusters/messages/en/increaseSize.json
+++ b/src/shared/adjusters/messages/en/increaseSize.json
@@ -6,5 +6,7 @@
     "additionalMagnifierAdjusters": "additional magnifier preferences",
     "additionalVisualAdjusters": "additional visual preferences",
     "moreMagnifierPreferences": "more magnifier preferences",
-    "lessMagnifierPreferences": "less magnifier preferences"
+    "lessMagnifierPreferences": "less magnifier preferences",
+    "autoAdjustLabel": "Auto-adjust",
+    "autoAdjustDescription": "Preferences will be automatically adjusted based on background noise and ambient light levels."
 }
