--- a/src/shared/adjusters/messages/es/increaseSize.json
+++ b/src/shared/adjusters/messages/es/increaseSize.json
@@ -6,5 +6,7 @@
     "additionalMagnifierAdjusters": "más ajustadores de lupa",
     "additionalVisualAdjusters": "más ajustadores de lectores de pantalla",
     "moreMagnifierPreferences": "Más preferencias de lupa",
-    "lessMagnifierPreferences": "Menos preferencias de lupa"
+    "lessMagnifierPreferences": "Menos preferencias de lupa",
+    "autoAdjustLabel": "Auto-ajustar",
+    "autoAdjustDescription": "Las preferencias se ajustarán automáticamente en función del ruido de fondo y los niveles de luz ambiental."
 }
