--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bugs": "http://issues.gpii.net/browse/GPII/component/10205",
     "homepage": "http://wiki.gpii.net/w/User_Preferences_UX",
     "dependencies": {
-        "kettle": "git://github.com/fluid-project/kettle.git#2cd608b95a7e908769c91f5120cfc50bfc19c4db"
+        "kettle": "git://github.com/fluid-project/kettle.git#2cd608b95a7e908769c91f5120cfc50bfc19c4db",
+        "open": "~0.0.5"
     },
     "licenses": [
         {
